--- a/components/Game.module.css
+++ b/components/Game.module.css
@@ -1,6 +1,57 @@
+.game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
 .board {
   display: grid;
   background: #111111;
   border: 5px solid #3A335D;
+  border-radius: 0 0 10px 0;
+}
+
+.levelpanel {
+  background: #111111;
+  border: 5px solid #3A335D;
+  transform: translateX(5px);
+  margin-top: auto;
+  border-radius: 10px 0 0 10px;
+}
+
+.levelpanel .content {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.upcomingpanel {
+  background: #111111;
+  border: 5px solid #3A335D;
+  border-radius: 0 10px 10px 0;
+  transform: translateX(-5px);
+}
+
+.upcomingblocks {
+  display: grid;
   margin: 0 auto;
+}
+
+.score {
+  background: linear-gradient(to bottom, #1e082c, #230e44);
+  border: 5px solid #3A335D;
+  border-radius: 20px 20px 0 0;
+  transform: translateY(5px);
+}
+
+.score .content {
+  display: inline-block;
+  transform: translateY(5%);
 }
