--- a/components/Game.module.css
+++ b/components/Game.module.css
@@ -55,3 +55,76 @@
   display: inline-block;
   transform: translateY(5%);
 }
+
+.darkscreen {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.6);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.overlayscreen {
+  position: fixed;
+  z-index: 1;
+}
+
+.overlayscreen .bottomsection {
+  animation: slideup 1s 1.5s ease-in-out both;
+}
+
+.startscreen {
+  animation: hide 0s ease-in 2s forwards;
+}
+
+.titletext {
+  margin: 10px;
+  text-transform: lowercase;
+  font-weight: normal;
+  animation: slidedown 1s ease-in-out;
+}
+
+.button {
+  background: rgba(255, 255, 255, 0.2);
+  padding: 15px;
+  font-weight: bold;
+  font-size: 1em;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.button:hover {
+  background: rgba(255, 255, 255, 0.25);
+}
+
+.regulartext {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@keyframes slidedown {
+  from {
+    transform: translateY(-100vh);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideup {
+  from {
+    transform: translateY(100vh);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+@keyframes hide {
+  to {
+    visibility: hidden;
+  }
+}
