--- a/components/Game.module.css
+++ b/components/Game.module.css
@@ -94,6 +94,7 @@
 .button {
   background: rgba(255, 255, 255, 0.2);
   padding: 15px;
+  margin: 5px;
   font-weight: bold;
   font-size: 1em;
   color: #ffffff;
