--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,7 +4,9 @@
 }
 
 .gamemodes {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   gap: 20px;
 }
 
@@ -22,6 +24,14 @@
 
 .playbutton:hover {
   background: #cccccc;
+}
+
+.instructions {
+  background: rgba(255, 255, 255, 0.1);
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  padding: 20px 40px;
+  border-radius: 20px;
+  font-weight: bold;
 }
 
 .customsettings input {
